legacy-manifests/ingress-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-lb
  namespace: ingress
spec:
  type: LoadBalancer
  selector:
    name: nginx-ingress-microk8s # name ingress controller pod
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
  externalTrafficPolicy: Local
