legacy-manifests/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-lb
spec:
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP # should be ClusterIP. Because metallb provided external IP for ingress is single entrypoint, not service!
