legacy-manifests/nginx-ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-tls
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: sebastianmeyer.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-lb
                port:
                  number: 80
    - host: www.sebastianmeyer.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-lb
                port:
                  number: 80
  tls:
    - hosts:
        - sebastianmeyer.org
        - www.sebastianmeyer.org
      secretName: nginx-tls        # Ionos cert
